--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -10,31 +10,31 @@ import { pgwWrap } from "../js/pgw.js";
     <div class="splide__track">
       <ul class="splide__list">
         <li class="splide__slide">
-          <img src="/image/food_slider/1.png" alt="Food Sponsor 1" />
+          <img src={pgwWrap("/image/food_slider/1.webp")} alt="Food Sponsor 1" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/2.png" alt="Food Sponsor 2" />
+          <img src={pgwWrap("/image/food_slider/2.webp")} alt="Food Sponsor 2" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/3.png" alt="Food Sponsor 3" />
+          <img src={pgwWrap("/image/food_slider/3.webp")} alt="Food Sponsor 3" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/4.png" alt="Food Sponsor 4" />
+          <img src={pgwWrap("/image/food_slider/4.webp")} alt="Food Sponsor 4" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/5.png" alt="Food Sponsor 5" />
+          <img src={pgwWrap("/image/food_slider/5.webp")} alt="Food Sponsor 5" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/6.png" alt="Food Sponsor 6" />
+          <img src={pgwWrap("/image/food_slider/6.webp")} alt="Food Sponsor 6" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/7.png" alt="Food Sponsor 7" />
+          <img src={pgwWrap("/image/food_slider/7.webp")} alt="Food Sponsor 7" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/8.png" alt="Food Sponsor 8" />
+          <img src={pgwWrap("/image/food_slider/8.webp")} alt="Food Sponsor 8" />
         </li>
         <li class="splide__slide">
-          <img src="/image/food_slider/9.png" alt="Food Sponsor 9" />
+          <img src={pgwWrap("/image/food_slider/9.webp")} alt="Food Sponsor 9" />
         </li>
       </ul>
     </div>
