--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -74,13 +74,13 @@ import { pgwWrap } from "../js/pgw.js";
       href="https://www.facebook.com/sharer/sharer.php?u=https://event.udn.com/bd_500bowls_vote2025?utm_source=line_fb&utm_medium=sharepost&utm_campaign=bd_500bowls_vote2025"
       target="_blank"
       rel="noopener noreferrer"
-      class="social-icon"><img src="/image/fb.png" alt="Facebook" /></a
+      class="social-icon"><img src={pgwWrap("/image/fb.webp")} alt="Facebook" /></a
     >
     <a
       href="https://social-plugins.line.me/lineit/share?url=https://event.udn.com/bd_500bowls_vote2025?utm_source=line_fb&utm_medium=sharepost&utm_campaign=bd_500bowls_vote2025"
       target="_blank"
       rel="noopener noreferrer"
-      class="social-icon"><img src="/image/line.png" alt="line" /></a
+      class="social-icon"><img src={pgwWrap("/image/line.webp")} alt="line" /></a
     >
   </div>
   <div class="hamburger-menu">
