--- a/src/components/topthree.astro
+++ b/src/components/topthree.astro
@@ -323,10 +323,10 @@ import { pgwWrap } from "../js/pgw.js";
         height: 50px;
         padding: 0;
         // 手機版較小的位移
-        transform: translateX(30px);
+        transform: translateY(30px);
 
         &.slide-in {
-          transform: translateX(0);
+          transform: translateY(0);
         }
       }
       &::before {
