解決食物列表會閃爍問題以及將背景圖片加上pgw。

--- a/src/components/Act.astro
+++ b/src/components/Act.astro
@@ -27,7 +27,7 @@ import Actpopup from "./ActPopup.astro";
 <style lang="scss" scoped>
   .act {
     width: 100%;
-    background-image: url("/image/500bowlbg.png");
+    background-image: url("https://pgw.udn.com.tw/gw/photo.php?u=https://event.udn.com/bd_500bowls_vote2025/image/500bowlbg.png&nt=1&v=20250620");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
