--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,8 @@ import Spnosor from "../components/Sponsor.astro";
 import Rolltop from "../components/Rolltop.astro";
 import { pgwWrap } from "../js/pgw.js";
 
-const bgImageUrl = "/image/500bowlbg.png";
+const bgImageUrl =
+  "https://pgw.udn.com.tw/gw/photo.php?u=https://event.udn.com/bd_500bowls_vote2025/image/500bowlbg.png&nt=1&v=20250620";
 const articleStyle = `background-image: url('${bgImageUrl}');`;
 ---
 
